# cdk_poetry_init

./: .pre-commit-config.yaml  ARTICLE.md  README.md  pyproject.toml
src/: cdk_poetry_init.py
tests/: test_cdk_poetry_init.py
